2009-02-17  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_config_info): Add CARBON_LIBS, X11_INCFLAGS,
	and X11_LIBS to the struct.
	* oct-conf.h.in (OCTAVE_CONF_CARBON_LIBS,
	OCTAVE_CONF_X11_INCFLAGS, OCTAVE_CONF_X11_LIBS): New macros.

2009-02-17  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* Makefile.in (octave$(EXEEXT)): Link with CARBON_LIBS.

2009-02-16  John W. Eaton  <jwe@octave.org>

	* lex.l (next_token_can_follow_bin_op):
	Push all characters read on to buffer stack.

	* genprops.awk (emit_source): Don't use + to concatenate strings.

2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (NATIVE_REDUCTION): Use boolNDArray::any for native bool
	summation, boolNDArray::sum for double-valued.

2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.cc (octave_base_matrix<MT>::assign (const octave_value_list&,
	typename MT::element_type): Fix invalid index.
	* ov-re-mat.cc (default_numeric_demotion_function): Use
	float_array_value instead of float_matrix_value.

2009-02-16  John W. Eaton  <jwe@octave.org>

	* input.cc (gnu_readline): Use fputs instead of fprintf.

2009-02-15  John W. Eaton  <jwe@octave.org>

	* defun.cc, defun-int.h, defun-dld.h (DEFUN_INTERNAL,
	DEFCONSTFUN_INTERNAL, DEFUNX_INTERNAL, DEFUN_DLD_INTERNAL,
	DEFUNX_DLD_INTERNAL, install_builtin_function,
	install_dld_function, install_mex_function):
	Delete IS_TEXT_FCN arg.  Fix all uses.
	(DEFMD, DEFUN_TEXT): Delete.
	* mkbuiltins, mkgendoc: Adapt to DEFUN macro changes.

	* lex.h, lex.l (lexer_flags::at_beginning_of_statement):
	New data member.  Set it as needed in rules.
	(is_keyword_token):
	Handle lexer_flags::at_beginning_of_statement.
	(next_token_can_follow_bin_op, looks_like_command_arg): New functions.
	(handle_identifier): Use them to determine 
	Don't check is_command_name or is_rawcommand_name.
	* parse.y (statement): Recognize word_list_cmd here.
	(expression): Not here.

	* lex.l (handle_string): Delete arg TEXT_STYLE.